// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blockAnchors rendering compile "HTML: after code block" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p><a aria-hidden=\\"true\\" class=\\"block-anchor anchor-heading icon-link\\" id=\\"^my-block-anchor-0\\" href=\\"#^my-block-anchor-0\\"></a></p><pre><code>const x = 1;
</code></pre><p></p>
<p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`blockAnchors rendering compile "HTML: after table" 1`] = `
"<h1 id=\\"root\\">Root</h1>
<div class=\\"table-responsive\\">












<table><thead><tr><th><a aria-hidden=\\"true\\" class=\\"block-anchor anchor-heading icon-link\\" id=\\"^my-block-anchor-0\\" href=\\"#^my-block-anchor-0\\"></a>t</th><th>a</th></tr></thead><tbody><tr><td>c</td><td>d</td></tr></tbody></table></div>
<p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>"
`;

exports[`blockAnchors rendering compile "HTML: end of paragraph" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p><a aria-hidden=\\"true\\" class=\\"block-anchor anchor-heading icon-link\\" id=\\"^my-block-anchor-0\\" href=\\"#^my-block-anchor-0\\"></a>Lorem ipsum dolor amet </p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`blockAnchors rendering compile "HTML: simple" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"block-anchor anchor-heading icon-link\\" id=\\"^my-block-anchor-0\\" href=\\"#^my-block-anchor-0\\"></a>Root</h1>
<p></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`blockAnchors rendering compile "MD_DENDRON: simple" 1`] = `
VFile {
  "contents": "# Root

^my-block-anchor-0

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
